// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`base usage 1`] = `
{
  "allFrames": false,
  "file": "content.js",
  "frameId": 0,
  "matchAboutBlank": undefined,
  "runAt": undefined,
}
`;

exports[`css content 1`] = `
{
  "allFrames": false,
  "file": "content.css",
  "frameId": 0,
  "matchAboutBlank": undefined,
  "runAt": "document_start",
}
`;

exports[`deferred usage 1`] = `
[
  [
    "webext-inject-on-install:1",
  ],
  [
    "webext-inject-on-install:2",
  ],
]
`;
